--- a/client/main.html
+++ b/client/main.html
@@ -1,9 +1,10 @@
 <head>
+  <meta name="viewport" content="width=device-width, initial-scale=1">
   <title>JenCo</title>
 </head>
 
 <body>
- <div id="app"></div>
+  <div id="app"></div>
 </body>
 
 <!-- <template name="hello">
