some design here and there , maybe also a bugfix

--- a/client/main.html
+++ b/client/main.html
@@ -4,7 +4,9 @@
 </head>
 
 <body>
-  <div id="app"></div>
+  <div class="bg">
+    <div id="app"></div>
+  </div>
 </body>
 
 <!-- <template name="hello">
